tests/textual/error/encodeUtf8-wrong-argument.uplc
(program 0.0.0 [(builtin encodeUtf8) (con integer 0)])